--- a/PartyMat/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/PartyMat/.settings/org.sonar.ide.eclipse.core.prefs
@@ -2,6 +2,6 @@ analyseLocally=true
 eclipse.preferences.version=1
 extraProperties=
 lastAnalysisDate=1380926694422
-projectKey=com\:partymat
+projectKey=PartyMat\:PartyMat
 serverUrl=http\://www.aplsoftware.com\:9000
 version=2
