--- a/PartyMat/pom.xml
+++ b/PartyMat/pom.xml
@@ -77,5 +77,11 @@
       <version>2.0.0</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>com.apl.components</groupId>
+      <artifactId>AplComponent</artifactId>
+      <version>3.0.0</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 </project>
